--- a/steins_gate_0/docs/0049.md
+++ b/steins_gate_0/docs/0049.md
@@ -1,6 +1,8 @@
-> <big> **瓦尔基里终末
-> [ 2036/08/13 ]
+> <big> **瓦尔基里终末报告 - 01** </big>  
+> 1.143688  
+> [ 2036/08/13 ]  
 
+<table border="0">
 |时间：| 2036/08/13 |  
 |世界线变动率：| ■■■■■■■■ |  
 |主要作战成员：| No.002巴莱尔·提托，No.006咲村，No.007柴郡猫，约翰·提托 |  
@@ -11,7 +13,7 @@ No.003自2011年失踪，至今下落不明；
 
 ---
 作战概要：  
-约翰·提托将乘坐V204 2nd EDITION ver2.31
+约翰·提托将乘坐V204 2nd EDITION ver2.31返回分歧点时间20■■/■■/■■
 
 
 
