--- a/steins_gate_0/docs/0049.md
+++ b/steins_gate_0/docs/0049.md
@@ -18,9 +18,12 @@ No.003自2011年失踪，至今下落不明；
   - 若拯救行动失败，则之后行动核心为唤醒No.001使其重新振作。  
 - 尝试回避20■■/■■/■■秋叶原冲突导致的人员失散与V204破坏。  
 
-<div align="right"> ——No.002 巴莱尔·提托 </div>
+<div align="right"> ——No.002 巴莱尔·提托 </div>  
 
 （我一个人没办法弄懂如何到达 *Steins;Gate*。我能做的只有复现我所知道的历史达成闭环，让希望不会断绝。我相信，凤凰院凶真一定迟早有一天会和我们一起……不，不对，是站在我们的前阵，指引我们。）  
+
+
+![](../pics/085.png)
 
 
 <br/>
