--- a/steins_gate_0/docs/0018.md
+++ b/steins_gate_0/docs/0018.md
@@ -1,4 +1,4 @@
-> <big> **闭时曲线的碑文 - 13a** </big>  
+> <big> **闭时曲线的碑文 - 13α** </big>  
 > 1.129848  
 > [ 2010/12/15 ] 没有关机。与教授见面前的路上遇到了吹雪和枫，逃开了。  
 
