--- a/steins_gate_0/docs/0035.md
+++ b/steins_gate_0/docs/0035.md
@@ -57,4 +57,5 @@
 > (to be continued)
 ---
 
-| [←prev](./0034) | [home](../../) | [next→](./0036) |
+| [←prev](./0034) | [home](../../) | [next→](./0036) |  
+|                 |                | [next→](./t0036-2) |
