--- a/steins_gate_0/docs/0035.md
+++ b/steins_gate_0/docs/0035.md
@@ -57,5 +57,5 @@
 > (to be continued)
 ---
 
-| [←prev](./0034) | [home](../../) | [next→](./0036) |  
-|                 |                | [next→](./t0036-2) |
+| [←prev](./0034) | [home](../../) | [接电话→  ](./0036) |  
+|                 |                | [不接电话→](./t0036-2) |
