update branch selection

--- a/steins_gate_0/docs/0017.md
+++ b/steins_gate_0/docs/0017.md
@@ -185,5 +185,5 @@
 > (to be continued)
 ---
 
-| [←prev](./0016) | [home](../../) | [不关机→](./0018) |  
-|                 |                | [关机→  ](./0050) |
+| [←prev](./0016) | [home](../../) | [next→不关机](./0018) |  
+|                 |                | [next→关机  ](./0050) |
