--- a/steins_gate_0/docs/0050.md
+++ b/steins_gate_0/docs/0050.md
@@ -1,6 +1,6 @@
 > <big> **闭时曲线的碑文 - 13β** </big>  
 > 1.129848  
-> [ 2010/12/15 ] 接0017 - 关机。与教授见面前，在秋叶原的天桥遇到了吹雪和枫。被问到喜欢的人时想起杀死红莉栖的场景而呕吐，然后突然跳线。
+> [ 2010/12/15 ] 接0017 - 关机。与教授见面前，在秋叶原的天桥遇到了吹雪和枫。被问到喜欢的人时想起杀死红莉栖的场景而呕吐，然后突然感觉跳线。
 
 手机关机了。我慢慢站了起来。如果琉华子看到现在的我，大概又会担心吧，还是赶紧离开为好。虽然有些蹒跚，但还不至于走不动。  
 
