--- a/steins_gate_0/docs/0002.md
+++ b/steins_gate_0/docs/0002.md
@@ -10,7 +10,7 @@
 &emsp;很期待是怎样的研讨会呢  
 &emsp;真由喜也想看看啊~』  
 「对你来说可能太难了」  
-『说的也是呢~那么，就不打扰你啦，再见~』  
+『说的也是呢~那么，就不打扰你啦，再见~~』  
 字里行间都充斥着真由理那无忧无虑的风格啊。  
 多亏了她，15分钟感觉也没那么难过了。  
 
