--- a/steins_gate_0/docs/0052.md
+++ b/steins_gate_0/docs/0052.md
@@ -1,6 +1,6 @@
 > <big> **亡失流转的寂寥 - 02** </big>  
 > 1.064750  
-> [ 2010/12/15 ] 
+> [ 2010/12/15 ] 向教授二人进行测试报告。  
 
 向教授他们报告的地方是某个宾馆的一间套房。  
 “那么就现在来说，和『Amadeus』的对话可以说还不错是吧，*Rintaro* ？”  
@@ -81,10 +81,10 @@
 “很遗憾，我没有这种打算。并且，美国和欧洲是不会开什么圣诞派对的。”  
 “是这样吗？”  
 “对他们来说，圣诞节是个神圣的日子，所以和家人一起度过才是正常的哟。  
-&emsp;&emsp; 倒是在年末那天会搞得很热闹。”  
+&emsp;倒是在年末那天会搞得很热闹。”  
 这么说来，以前我好像在电视里也听到过这种说法。  
 “嘛，我的话因为在这边没有家人，所以不论如何都是一个人过的啦。  
-&emsp;&emsp; 啊，但是不要觉得我会感到寂寞哦？不要误会。”  
+&emsp;啊，但是不要觉得我会感到寂寞哦？不要误会。”  
 虽然嘴里这么说，但是在喧嚣的大街上一个人过圣诞节什么的，果然还是很寂寞的吧。可是如果说出这种想法，一定会被说多管闲事什么的，所以我并没说出口。
 
 
@@ -92,16 +92,16 @@
 『喂喂，冈伦，死库水的话你觉得哪种颜色比较好？』  
 「你在说什么啊」  
 『呀，我在玩黄游，里面出现了这个选项  
-&emsp;&emsp; 所以在想，如果是冈伦会选什么颜色』  
-「![](../pics/0052-1.png)」  
+&emsp;所以在想，如果是冈伦会选什么颜色』  
+「 ![](../pics/0052-1.png) 」  
 『呃，其实我最想问的是真由喜和琉华氏还有菲利斯碳他们的想法』  
 「她们会叫警察来抓你的」  
 『对吧  
-&emsp;&emsp; 所以我无奈之下才来问冈伦你啊！！！  
-&emsp;&emsp; 那，选什么颜色？别害羞说一下嘛~ 来嘛~~』  
+&emsp;所以我无奈之下才来问冈伦你啊！！！  
+&emsp;那，选什么颜色？别害羞说一下嘛~ 来嘛~~』  
 「你直接去问铃羽吧」  
 『绝 对 不 可 能  
-&emsp;&emsp; 会被杀掉的』  
+&emsp;会被杀掉的』  
 
 
 <br/>
