update new chapters

--- a/steins_gate_0/docs/0053.md
+++ b/steins_gate_0/docs/0053.md
@@ -1,320 +1,14 @@
-> <big> **亡失流转的寂寥 - 01** </big>  
+> <big> **亡失流转的寂寥 - 03** </big>  
 > 1.064750  
 > [ // ] 
 
-升腾的黑烟四处弥漫，将天空染得暗红
-瓦砾零落，已无处踏足
-悲鸣。枪声
-还有异臭
-只要是尚存一息的人都能明白那气味从何而来
-那是烧焦的气味
-是家园、大厦、汽车、单车、树木、草地
-还有人
-被焚烧、熏烤、焦灼的气味
-瓦砾之间立着什么又黑又细的东西
-是手
-就像要抓住天空一样，僵直地伸着却一动不动的手
-并不仅仅是这里
-所到之处遍地都是破碎四散的残肢、破手、断颅
-人们的残骸四处滚动
-枪声撕裂了远方的天空
-悲鸣
-静寂
-什么都没有改变过
-只是徒增了一滩尸块而已
-世界的确在向着毁灭前行
-人们终于明白
-这并不是死后世界的光景
-正是现世的惨状
-地狱
-是的，除了地狱之外无法形容
-唔
-世界扭曲起来
-强烈的眩晕随之而来
-虽然平时偶尔也会头晕目眩
-但这回却不同
-就像脑袋中央被拧了的感觉
-就像这个世界本身在摇晃的感觉
-一种既视感油然而生
-我知道的
-这是——
-唔……哈…….哈…….
-世界的色彩终于在眼前恢复
-来来往往的行人的声音和汽车的噪音，以奔流之势一齐涌入耳中
-那个。冈伦……没事吧？你出了好多汗啊……
-是不是身体不舒服？
-啊……不是……
-吹雪和枫……
-眼前依旧是这两人，她们正担心地看着我
-也就是说，只是眼花而已吗？
-真的没事，谢谢你们的关心
-那我们，就先走一步了
-我很期待这次的聚会……
-留下道别的话语，两人向着车站的方向离去
-我呆呆地望着她们的背影
-刚刚的……是怎么回事？
-……
-没有一个人关心一直呆站着的我
-大家都活在一个连续的时间中
-但那果真还是……
-是的
-我知道——只有我知道
-刚才的感觉——是Reading Steiner
-也就是说，世界线——变动了？
-……！
-我摇摇头，打消了刚才浮现的猜想
-不可能会有这种荒唐的事
-世界线仅仅会在什么人改变了过去的时候变动
-迄今为止我只有在用电话烤箱（暂）发D-mail的时候见过时间线变动
-但是我为了防止那样的事情再度发生，已经把电话烤箱（暂）废弃了才对
-为了这个，我不惜牺牲了红莉栖
-那么，这到底是谁，到底是怎样做到的？
-如果是某个人开发了和电话烤箱（暂）相同的装置呢？
-——唔！
-真由理……
-得快点确认真由理的平安！
-现在就打电话吧！
-如果因为世界现的变动，真由理又遭遇了什么不测的话……
-只是想象就让我毛骨悚然
-那种事绝对不能发生
-绝对不会发生
-虽然我想这样坚信，但是浮现在眼前的是，无论如何都会在α世界线里死上一遍又一遍的真由理
-总之想要尽快和她取得联系
-想要听到真由理的声音
-嗯，怎么办才好……
-我意识到自己陷入了恐慌之中
-沉一沉气
-冷静下来
-我用手机调出真由理的名字，点了一下她的号码
-铃声一遍又一遍地在耳畔作响
-但是一直都没有人接
-7秒，8秒，9秒……
-时间过得越长，心中的焦躁和不安就会越发急剧，烦人的冷汗从背脊一路滑下
-12秒，13秒，14秒……
-即便如此我还是以祈祷的心情执拗地等待
-铃声大约在即将超过一分钟的时候，冷不防地在耳边中断
-唔——！
-嘟嘟噜——这里是真由喜
-真由理！是真由理吗！？真的是真由理吧！？
-冈，冈伦，怎么了？这么慌张
-从电话那头传来的悠然自在的声音，那的确是来自真由理的
-我很担心啊，一直都不接电话
-啊，对不起。电话被我放在包里了
-什么都没发生
-问过后，是非常简单的理由
-难道有什么急事吗？
-不，你别在意。只是……有点不安而已
-不安？
-……你现在在哪里？有人一起吗？
-现在要去打工哦~
-到几点？
-到八点之后吧
-是吗，我知道了
-冈伦，你要过来玩吗？
-不，今天还有事，我去不了
-我打完工也会去Lab一趟哟
-我知道了……如果能去的话，就在那汇合，一起回去吧
-真的~~？今天很稀奇呢。诶嘿嘿~
-那，打工加油啊
-语罢，我挂断了电话
-真由理平安无事
-也就是说，刚刚的世界线变动与真由理无关吗，虽说不能疏忽大意……
-或者刚刚的只是单纯的眼花啊白日梦之类的，根本就不是什么世界线变动呢
-如果真是这样，我想这倒也太现实了一点
-以防万一，我又拿起了手机
-在最近几天点了许多的地方，果然有那个图标
-……
-我稍微有一些犹豫
-毕竟还有刚才的那件事
-即便如此，我竟然又腆着脸，冷不防地打过去
-但转念一想还是先确认一下现在的状况的好，我点击了那个图标
-怎么？有什么忘说了的事？
-“红莉栖”的语气极其普通
-……你不生气吗？
-生气？为什么？
-因为……刚刚说到一半我就关机了吧？所以……
-关于这个，你刚刚已经道过歉了。我又不是那种会拿着已经原谅过的事叨叨个不停的人
-我刚刚……道过歉了？
-是啊，你不是又打过来了吗？
-又打过去了？我吗？
-就在7分43秒前的事，你忘了吗？
-我，道歉了？向你？
-……没事吧？
-“红莉栖”一本正经地说着
-看起来并不像胡说八道
-发生了什么？感觉跟刚刚不是同一个人啊
-……不，没事
-没有印象
-我虽然还记得关机的事，但对于那之后又与她——作为“Amadeus”的“红莉栖”对话的事，却是毫无印象
-如果是以前的话，到底也只会觉得自己是对的，而她搞错了吧
-但是现在的我——毫无自信可言
-经历了数不清的过去，体会了数不清的艰苦和悲痛的这颗脑袋，即便是过去了半年也还是非常疲乏
-到底哪些是实际发生了的，哪些是没有的
-又有哪些是对的，哪些是错的，我对这些都没有自信
-可以说是已经再也不想多加考虑了
-未来什么的，过去什么的，世界什么的
-我已经再也不想和这些东西扯上关系了
-看起来状态很差呢，跟哪位熟人联系一下，在哪里休息一下会不会好一些
-……
-……冈部？
-呐，“红莉栖”，我可以，问你一件事吗？
-你知道刚才打完电话后，我准备去做什么吗？
-……
-这之后你是要与雷斯吉宁教授和真帆前辈见面的吧
-不是要报告一些关于我的事嘛
-看来与我的记忆没有什么分歧
-……是吗
-要不要事先向真帆前辈说一下你的情况？
-真的没事。很抱歉让你担心了
-别太逞强哦。我可不想变成你最后一个说过话的人
-……
-我苦笑着结束了与“红莉栖”的对话
-以防万一，刚刚我又向桶子打电话确认了一遍，了解到自己的确是在前往教授和真帆那里报告的途中
-顺便一提，这几天的事基本也都与我的记忆吻合
-也就是说，即使世界线变动了，我周围的圈子也没有发生过任何变化
-应该没什么大问题
-说起来，刚才那一瞬的眩晕也有可能是因为什么精神性的疾病引起的
-有可能只是由于感觉相同，激起了过去的心理创伤，害得记忆混乱了
-电话烤箱（暂）一开始就不存在
-那么改变过去什么的，根本就不可能
-是的
-就是这样
-我好几次这样说服自己，走向了教授他们等候的地方
-向教授他们报告的地方是某个宾馆的一间套房
-那么就现在来说，和『Amadeus』的对话可以说还不错是吧，Rintaro
-……嗯。对话也没出现过不对的地方
-顺便一问，你觉得“Kurisu”和你的距离感如何？
-距离感……你是说什么意思？
-就是说谈话之间，你们有没有变得亲近了一点？
-那样的话，比起第一次对话时多少有点……
-多少？应该说变化很大吧？
-因为我也在和“红莉栖”对话，所以还是知道这些的
-最初那孩子一直在为“被无视了8回”的事生气呢
-现在你们已经变得关系这么好了，这说明你们间缩小了相应的距离吧
-是这样吗！这可真是喜讯！
-听了真帆的话，雷斯吉宁显得非常高兴
-我很期待啊，她会不会对你抱有友情——更进一步说，会不会抱有爱情
-爱情！？
-没必要喊那么大声吧
-但是……那个……那是AI啊？
-正因为是AI啊
-这是什么情况？
-她也是有感情的吧
-嗯，但是，那说到底也只是程序上的……
-但人脑不也是一样嘛？
-
-
-确实，人的大脑都是用电信号运作的，所以要说构造相同也没什么不可以。
-
-现在，机器有感情没感情什么的课题早就过时了。就算是机器也是有感情的呀。
-
-归根结底，“Amadeus”是为了再现我们的人脑而制作出来的。
-
-构造相同，运作过程也相同，所以作为结果诞生出的东西也应该是一样的对不？
-
-这么说的话，她也有很大可能性能够恋爱。不，我希望她一定要恋爱。
-
-恋爱……“Amadeus”
-
-哦哦，说了这种话估计要被Maho讨厌了吧！
-
-请教授不要像“红莉栖”那样说话！
-
-哈哈哈，开玩笑的啦，开玩笑。
-
-Maho生气起来很可怕，所以注意一下可能会比较好呢
-
-嘿嘿，这个我已经知道了。
-
-喂，我可是能听见的啊！
-
-Oh，话说回来，我必须要联系下朱蒂了。
-Rintaro，不好意思，先失陪了。
-
-这样说着，教授慌张地离开了房间。
-
-逃掉了啊。
-
-真是的，红莉栖也好教授也好，为什么不管什么事都会立即扯到男女关系啊！
-
-真受不了啊。
-
-原来，当初的红莉栖是个那么元气的人啊。
-
-啊，对啦。冈部先生，稍微有些事想问下你……
-
-那孩子……红莉栖，你知道她有什么喜欢的词吗？
-
-词？
-
-数字什么的都可以，有可能成为密码的东西，你心里有没有想到什么？
-
-要破解红莉栖设置的密码吗？
-
-你很清楚呢。
-
-猜中了呀……
-
-那么……是她研究室的电脑还是什么？
-
-不，是她的私人物品。在她家里发现的笔记本电脑。
-
-那种东西为什么在你那……？
-
-是我分到的她的遗物。是红莉栖的母亲给我的。
-于是，因为想要确认下里面的内容，所以我在找解除密码的方法。我觉得你可能会知道所以说......
-有密码不就意味着，是被别人看到了的话会很困扰的东西不是吗？
-虽然是这么说没错......
-但是，为了让她———让“Amadeus”的“红莉栖”更加接近真人，把这之中的数据解析出来的话会比较好，对吧？
-当然，我自己是尽量不会去看那些和隐私有关的东西的。
-真帆说的事我当然不会不理解。
-在那电脑里可能有日记一样的东西，来到这边时的行动的记录也是有可能存在的
-然而......
-不好意思，我没什么线索。
-什么都没？
-嗯。并且就算我知道，我觉得我也不会说的。
-因为有不想让别人知道的事？
-特别是电脑里面的东西，等于是隐私的结晶一样的东西啊。
-这种话桶子经常在说。
-能不能构建一个如果自己因为事故而死的时候，能立即清除电脑的硬盘里的内容的系统什么的
-可是，虽然桶子和红莉栖被人看到会困扰的东西完全不一样，但是不想让人看到这一点是一致的。
-是这样啊。
-真帆虽然还在在意着硬盘里的内容，但是却没有再缠着我询问更多。
-那么，接下来我就......
-我还是担心着真由理。
-【喂喂，冈伦，死库水的话你觉得哪种颜色比较好？】【校注：“死库水”这个词是否合适？但是考虑到桶子的死宅身份，用这种词汇应该也是正常的吧】
-【果然还是白色的咯？】
-【哦？】
-【真行啊冈伦。白色死库水什么的可不是一般人能想出来的。果然你比我还专业啊？】
-【是吗？】
-【我只是随便回答了一下而已来着】
-【冈伦，NICE！这个建议我收下了！】
-【你不要给我实况播放啊】
-站了起来，我转向房间的入口处。
-在那里，门上装饰着的一个小装饰品映入了我的眼帘。
-这么说的话，已经快要到圣诞了啊......
-我想起了真由理对这事特别有干劲的样子。
-比屋定小姐的话，圣诞节也在这里吧？
-恩恩。在这里还有一些事要做。
-要和谁一起过圣诞吗......？
-诶？
-啊，不是......那个，国外的圣诞节，都是要和朋友一起开心的开派对的对吧？
-很遗憾呢，我没有这种打算。
-并且，美国和欧洲是不会开什么圣诞派对的。
-是这样吗？
-对他们来说，圣诞节是个神圣的日子吧？所以和家人一起度过才是正常的哟。虽然在除夕夜的样子比较吵呢。
-这么说回来，以前我在电视里好像也听到过这种事。
-嘛，虽然我的话因为在这边没有家人，所以不论如何都是一个人这点是不会变的啦。
-啊，但是不要觉得我会感觉寂寞哦？别误会了哟。
-虽然嘴里这么说，但是在喧嚣的大街上一个人过圣诞节什么的，果然还是很寂寞的吧。
-可是，如果说出这种想法的话，一定会被说是多管闲事什么的吧，所以我并没说出口。
 和教授们的谈话结束后，我就去了Lab。
 虽然在电话里确认了真有理没事，但我也想要在现实里看到她，自己清楚地看到真由理没事才行。
 从外面看的话，Lab的灯是开着的。
 像要完全摆脱外面已经变冷了的空气一样，我从楼梯飞奔而上，打开了门。
 真由理，在吗——
 开门的过程中，我的胸被一股小小的冲击撞了下。
-啊！······
+啊！……
 啊，不好意思。
 不不。是我不好，对不起。
 看来，好像刚才是准备要出去的样子。
@@ -323,7 +17,7 @@ Rintaro，不好意思，先失陪了。
 真由理和铃羽的身姿都没看到。
 太好了，如果稍微早点回去了的话，就遇不上冈部先生了。
 唉？难道说在等我吗？
-是的······虽然这么说，但也并不是因为什么大事。只是带了一点东西。
+是的……虽然这么说，但也并不是因为什么大事。只是带了一点东西。
 是馒头哦。
 桶子已经把箱子里放着的一半左右的馒头都吃的精光了。
 因为是送给大家的礼物，所以请尽情吃吧。
@@ -333,30 +27,30 @@ Rintaro，不好意思，先失陪了。
 被桶子这么说后抬头看了看钟的琉华子，露出了慌张的样子。
 其实在这之后，家里会有客人来。
 客人？琉华子的吗？
-不是，是爸爸的客人，不知为什么说想让我也一起去······
+不是，是爸爸的客人，不知为什么说想让我也一起去……
 爸爸平时会把有同样兴趣的人叫来，和他们聊好长时间。
-因为都是些很难的话题，对我来说是理解不了的，所以平常我都只是做做端茶倒水的工作。为什么这回想要让我一起呢······
+因为都是些很难的话题，对我来说是理解不了的，所以平常我都只是做做端茶倒水的工作。为什么这回想要让我一起呢……
 很难的话题是指，宗教什么的，还是那类的话？
 琉华子的家叫柳林神社，在秋叶原也是属于很早以前就有的神社，琉华子的父亲是那边的官司。
 好像不是这样来着···
-和这之前的客人都是在说些什么，有明怎么怎么样的，晴海怎么怎么样的······像这种话题。
-晴海······有明······
-这些关键词莫非······
+和这之前的客人都是在说些什么，有明怎么怎么样的，晴海怎么怎么样的……像这种话题。
+晴海……有明……
+这些关键词莫非……
 真不愧是琉华子的爸爸。真厉害。
 冈部先生和桥田先生，能明白吗？
-嘛，姑且······呢。
+嘛，姑且……呢。
 但是，这个话题还是下次吧。有客人会来的话，快点回去比较好。
-啊！嗯，那么我就在此告别······下次还会拜访的呢。
+啊！嗯，那么我就在此告别……下次还会拜访的呢。
 猛的低下了头，琉华子已经走掉了。
 目送了她之后，我躺在了沙发上。
 真由理呢？
-在MayQueen吧？今天没来哦。
-那样的话，稍微等等吧······
+在 *MayQueen* 吧？今天没来哦。
+那样的话，稍微等等吧……
 还是说去接她呢？
-话说，冈部，刚才的电话什么的······那个，是什么来着？
-刚才······应该在说在去教授他们的地方之前打的确认电话的事吧。
-那个······还是别在意了。大概，是我多虑了。
-是吗？那就没事了······
+话说，冈部，刚才的电话什么的……那个，是什么来着？
+刚才……应该在说在去教授他们的地方之前打的确认电话的事吧。
+那个……还是别在意了。大概，是我多虑了。
+是吗？那就没事了……
 那个时候，感到的违和感。
 虽然想到是不是因为感知到了世界线的移动，但是像这样经过了几个小时，果然也没有发现什么变动的样子。
 不如说，连那个感觉到底是不是真的都变得很模糊了。
@@ -366,7 +60,7 @@ Rintaro，不好意思，先失陪了。
 战士怎么了？
 比起真由理，铃羽先回来了。
 琉华哥的爸爸，是战士吗？
-······为什么明明称琉华子是琉华哥，对我的称呼却是叔叔呢。
+……为什么明明称琉华子是琉华哥，对我的称呼却是叔叔呢。
 是的哦。并且是战士中的战士。说是身经百战的强者都不为过。
 诶。是这样啊。但是，琉华哥的家，我听说好像是和神职有关的。
 啊，是这样啊。倒是有说法说神职人员以前也是士兵。
@@ -374,13 +68,13 @@ Rintaro，不好意思，先失陪了。
 确实，琉华哥也很厉害。我理解了。
 很厉害？
 什么方面？
-······刚才的，就当没听过吧。
+……刚才的，就当没听过吧。
 对上了铃羽的脸后，就算是现在也觉得很尴尬。
 迄今为止控制来Lab的次数，是因为要避免和铃羽见面。
 冈伦叔。请不要做那种表情呀。
 看来我的思考在表情上浮现出来了的样子。铃羽有些不好意思的说着。
 你在避开我，这种事我是知道的呀。
-······倒不是因为你的错
+……倒不是因为你的错
 话说铃羽，今天又做什么做到这种时候了呀？
 哈！难不成是和哪个男人，约，约会什么的？！不允许！和那种来历不明的男人交往什么的，爸爸不允许！
 不是呀。不是那种事。
@@ -392,60 +86,60 @@ Rintaro，不好意思，先失陪了。
 哈。爸会这么说？
 什，什么意思啊？
 明明已经有了妈妈，还总在那里玩奇怪的游戏不是吗？
-那，那个······二次元和三次元到底还是不一样的！
+那，那个……二次元和三次元到底还是不一样的！
 你啊，不论二次元还是三次元都没关系，这不是你说的吗？
 冈伦！这种话居然在这里说？背叛我什么的好过分啊！
 我倒是不记得关于兴趣的问题上，我什么时候和桶子成为同伴过
 呃，咳咳！总之，是那样的话你今天到底做了什么，快告诉爸爸！
-什么啊······
+什么啊……
 没有什么愧疚的事的话，应该是能说的哟！
 铃羽稍微瞥了我一眼，像死了心一般叹了口气。
-······去找了人。
-人······？那么，果然还是男人？！
+……去找了人。
+人……？那么，果然还是男人？！
 不是说了不是吗？！
-小女孩······不，现在已经变得比我还年长了吧。
+小女孩……不，现在已经变得比我还年长了吧。
 对于铃羽的说法，我和桶子对上了脸。
-其实······我乘坐的时间机器里，还有一个人在。
+其实……我乘坐的时间机器里，还有一个人在。
 什么？！
 等等，铃羽！虽然那种事是第一次听到。
 因为到现在为止没说过呢。
 抬起头的铃羽的表情，露出了明显的后悔。
 那个人，是谁？现在怎么样了？
-现在怎么样了······我不知道。
+现在怎么样了……我不知道。
 居然说不知道——
 不小心走散了。在1998年。在这里，秋叶原。
-1998年······距今十二年前。
+1998年……距今十二年前。
 从未来来的不止有铃羽。
 要让这个意思要渗透到我脑子里，肯定是需要一些时间的。
 但，但是，为什么会变成这样？
-我和那个孩子，为了寻找IBN5100首先去了1975年。理由的话······叔叔你的话应该知道吧？
+我和那个孩子，为了寻找IBN5100首先去了1975年。理由的话……叔叔你的话应该知道吧？
 我沉默的点了点头。
 平安无事拿到IBN5100的我们，下一次去了1998年。
 为了回避千年虫问题的任务呢。
-千年虫问题······？
+千年虫问题……？
 20世纪末的时候，诺斯托拉达姆斯的大预言的骚动呢。
 但是最终，我记得虽然媒体和专家大肆炒作，但是并没有产生什么大的骚动样子。
 莫非没有骚动是因为，从未来来的约翰·提托的作用吗？
-那样的话······是多么厉害的事啊。
+那样的话……是多么厉害的事啊。
 在1998年，发生了一点问题，和那个孩子分开了。
 那么，就这么分开了后用时间机器跳跃了？
 那是因为没办法啊。因为是那孩子自己从时间机器里跳出去，并且——
 好像想起了什么，铃羽做出了很为难的表情吞下了下半句话。
-当然，我也去找过。在剩余燃料允许的范围内，我进行了数次小型的时间旅行，来回找那个孩子，但是······
-结果还是到现在为止都没找到吗······
-······大概的事情我明白了。但是为什么到现在为止都不说呢？
+当然，我也去找过。在剩余燃料允许的范围内，我进行了数次小型的时间旅行，来回找那个孩子，但是……
+结果还是到现在为止都没找到吗……
+……大概的事情我明白了。但是为什么到现在为止都不说呢？
 丢失那个孩子，是我的失误。我想要自己承担责任。
-······
+……
 真冷淡啊。
 拍了拍仰着头的铃羽的肩膀，桶子温柔地说道。
 我们可是亲子啊。有困难的时候来依靠我也没事的啊。
-爸······
+爸……
 找那个孩子就行了对吧？那么就让我们来帮助吧！对不，冈伦？
-啊，······我也要？
+啊，……我也要？
 当然咯。又不是拜托你改变未来，这种程度的话总可以的吧？
-嘛······
+嘛……
 说实话，一直拒绝铃羽“拯救世界”的要求，我对这些一直都抱有着愧疚。
-虽然能够办到的话，我也很想帮忙······
+虽然能够办到的话，我也很想帮忙……
 我在意的是，找到了之后该怎么办呢。
 话说，那个孩子的名字和年龄？顺便应该是可爱的女孩子吧？是男人的话爸爸可不允许！
 
@@ -479,7 +173,7 @@ OK
 实在是没敢这么问。
 嗯？稍微等等。既然女孩叫椎名的话，姓氏没有变啊？这么说的话……
 篝是战争遗孤。真由姐收留了没有归宿的她并抚养她长大。
-啊……这的确挺像真由氏的作风
+啊……这的确挺像真由喜的作风
 听到这些，我双重意义上感到了安心，也稍微陷入了自我厌恶之中。
 就算在未来真由理和谁结婚，只要那家伙幸福的话，这明明是值得高兴的事情啊。
 我受真由姐之托照顾篝。所以，变成这种状况是不行的——
@@ -533,7 +227,7 @@ OK
 虽然真由理知道铃羽是从未来过来的，但是突然听到未来的女儿这种事的话刺激是在是太强烈了。
 一定要想办法糊弄过去。
 真，真由理还很年幼——所以被称为幼女，对吧？
-诶？啊，没错。真由氏是幼女好可爱【校注：HENTAI乙】
+诶？啊，没错。真由喜是幼女好可爱【校注：HENTAI乙】
 嗯，经常被人说是童颜呢。虽然自己想变得像由季那样成熟呢【校注：我也知道自己话有点多，但是，我已经看到这里会有一大波弹幕了】
 可能只有食量这一点像真正的大人吧
 诶嘿嘿~
@@ -687,4 +381,4 @@ Hello—
 > (to be continued)
 ---
 
-| [←prev](./0050) | [home](../../) | [next→](./0052) |
+| [←prev](./0052) | [home](../../) | [next→](./0054) |
